--- a/index.html
+++ b/index.html
@@ -65,10 +65,15 @@
         <section class="bg-primary" id="about">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Nós temos o que você precisa!</h2>
                         <hr class="light">
-                        <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                        <p class="text-faded text-justify">Somos uma empresa
+                            Criada no município de Ribeirão Preto, por profissional com vasta experiência, tendo como objetivo se tornar um novo referencial em qualidade e eficiência nos serviços prestados, considerando todo know-how adquirido em mais de oito anos trabalhando neste mercado, além dos diversos cursos de aprimoramento e qualificação.
+                            A Kapa é uma nova alternativa no mercado de manutenção elétrica, hidráulica, pinturas e ar condicionado, atuando em diversos setores do mercado comercial, industrial e residencial dentre outros.
+                            Visamos formar parcerias com pequenas e grandes empresas, alcançando credibilidade nos serviços prestados a partir de um trabalho focado na satisfação total de nossos clientes. A empresa busca conscientizar seus colaboradores quanto a segurança pessoal, coletiva e preservação ambiental, atendendo as normas de segurança exigidas para cada tipo de serviço e mantendo o compromisso com legislações vigentes.
+                            A Kapa é uma empresa comprometida com a qualidade de seus serviços e aprecia o respeito e a ética com seus clientes.
+                            Solicite seu orçamento! </p>
                         <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Começar</a>
                     </div>
                 </div>
@@ -114,7 +119,7 @@
                 <div class="row no-gutter popup-gallery">
                     <div class="col-lg-4 col-sm-6">
                         <a href="img/portfolio/fullsize/ferro.jpg" class="portfolio-box">
-                            <img src="img/portfolio/thumbnails/ferro.jpg" class="img-responsive" alt="">
+                            <img src="img/portfolio/thumbnails/ferro.jpg" class="galeria-img" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-name">
@@ -129,7 +134,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a href="img/portfolio/fullsize/eletrica.jpg" class="portfolio-box">
-                            <img src="img/portfolio/thumbnails/eletrica.jpg" class="img-responsive" alt="">
+                            <img src="img/portfolio/thumbnails/eletrica.jpg" class="galeria-img" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-name">
@@ -144,7 +149,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a href="img/portfolio/fullsize/hidraulica.jpg" class="portfolio-box">
-                            <img src="img/portfolio/thumbnails/hidraulica.jpg" class="img-responsive" alt="">
+                            <img src="img/portfolio/thumbnails/hidraulica.jpg" class="galeria-img" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-name">
@@ -159,7 +164,7 @@
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a href="img/portfolio/fullsize/pintura.jpg" class="portfolio-box">
-                            <img src="img/portfolio/thumbnails/pintura.jpg" class="img-responsive" alt="">
+                            <img src="img/portfolio/thumbnails/pintura.jpg" class="galeria-img" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-name">
@@ -173,23 +178,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a href="img/portfolio/fullsize/protecao.jpg" class="portfolio-box">
-                            <img src="img/portfolio/thumbnails/protecao.jpg" class="img-responsive" alt="">
-                            <div class="portfolio-box-caption">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-name">
-                                        Proteção
-                                    </div>
-                                    <div class=" project-category text-faded">
-                                        Circuitos fechados de TV, cercas eletrificadas, central de alarmes, concertinas, antenas de TV, roteadores e redes.
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-lg-4 col-sm-6">
                         <a href="img/portfolio/fullsize/gelado.jpg" class="portfolio-box">
-                            <img src="img/portfolio/thumbnails/gelado.jpg" class="img-responsive" alt="">
+                            <img src="img/portfolio/thumbnails/gelado.jpg" class="galeria-img" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                     <div class="project-name">
@@ -197,6 +187,21 @@
                                     </div>
                                     <div class="project-category text-faded">
                                         Instalação de ar-condicionado, criação de infraestrutura para instalação e manutenção geral.
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a href="img/portfolio/fullsize/protecao.jpg" class="portfolio-box">
+                            <img src="img/portfolio/thumbnails/protecao.jpg" class="galeria-img" alt="">
+                            <div class="portfolio-box-caption">
+                                <div class="portfolio-box-caption-content">
+                                    <div class="project-name">
+                                        Proteção
+                                    </div>
+                                    <div class=" project-category text-faded">
+                                        Circuitos fechados de TV, cercas eletrificadas, central de alarmes, concertinas, antenas de TV, roteadores e redes.
                                     </div>
                                 </div>
                             </div>
