--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Kapasoluções</title>
         <!-- Bootstrap Core CSS -->
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom Fonts -->
@@ -16,7 +14,7 @@
         <!-- Plugin CSS -->
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
         <!-- Theme CSS -->
-        <link href="css/creative.css" rel="stylesheet">
+        <link href="css/creative.min.css" rel="stylesheet">
         <link rel="shortcut icon" href="img/icon.ico" type="image/x-icon">
         <link rel="icon" href="img/icon.ico" type="image/x-icon">
     </head>
