--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <h2 class="section-heading">Nós temos o que você precisa!</h2>
                         <hr class="light">
                         <p class="text-faded text-justify">Somos uma empresa
-                            Criada no município de Ribeirão Preto, por profissional com vasta experiência, tendo como objetivo se tornar um novo referencial em qualidade e eficiência nos serviços prestados, considerando todo know-how adquirido em mais de oito anos trabalhando neste mercado, além dos diversos cursos de aprimoramento e qualificação.
+                            criada no município de Ribeirão Preto, por profissional com vasta experiência, tendo como objetivo se tornar um novo referencial em qualidade e eficiência nos serviços prestados, considerando todo know-how adquirido em mais de oito anos trabalhando neste mercado, além dos diversos cursos de aprimoramento e qualificação.
                             A Kapa é uma nova alternativa no mercado de manutenção elétrica, hidráulica, pinturas e ar condicionado, atuando em diversos setores do mercado comercial, industrial e residencial dentre outros.
                             Visamos formar parcerias com pequenas e grandes empresas, alcançando credibilidade nos serviços prestados a partir de um trabalho focado na satisfação total de nossos clientes. A empresa busca conscientizar seus colaboradores quanto a segurança pessoal, coletiva e preservação ambiental, atendendo as normas de segurança exigidas para cada tipo de serviço e mantendo o compromisso com legislações vigentes.
                             A Kapa é uma empresa comprometida com a qualidade de seus serviços e aprecia o respeito e a ética com seus clientes.
@@ -90,23 +90,32 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-home text-primary sr-icons"></i>
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-home fa-stack-1x fa-inverse"></i>
+                            </span>
                             <h3>Residência</h3>
-                            <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                            <!--p class="text-muted">Our templates are updated regularly so they don't break.</p-->
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-suitcase text-primary sr-icons"></i>
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-suitcase fa-stack-1x fa-inverse"></i>
+                            </span>
                             <h3>Comércio</h3>
-                            <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                            <!--p class="text-muted">Our templates are updated regularly so they don't break.</p-->
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 text-center">
                         <div class="service-box">
-                            <i class="fa fa-4x fa-industry text-primary sr-icons"></i>
+                            <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                <i class="fa fa-industry fa-stack-1x fa-inverse"></i>
+                            </span>
                             <h3>Indústria</h3>
-                            <p class="text-muted">We update dependencies to keep things fresh.</p>
+                            <!--p class="text-muted">Our templates are updated regularly so they don't break.</p-->
                         </div>
                     </div>
                 </div>
