--- a/index.html
+++ b/index.html
@@ -223,10 +223,14 @@
                     <div class="col-lg-8 col-lg-offset-2 text-center">
                         <h2 class="section-heading">Contato</h2>
                         <hr class="primary">
-                        <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                        <p>Pronto para começar seu próximo projeto com a gente? Isso é ótimo! Dê-nos uma chamada ou enviar-nos um e-mail e vamos voltar para você o mais rápido possível!</p>
                     </div>
                     <div class="col-lg-4 col-lg-offset-2">
                         <form action="email.php" method="post">
+                            <div class="form-group">
+                                <label for="exampleInputNome">Nome</label>
+                                <input type="text" name="nome" class="form-control" id="exampleInputNome" placeholder="Nome">
+                            </div>
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Email</label>
                                 <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
